# Solstrale-Rust

./: .gitignore  Cargo.toml  README.md  profile.sh
.github/workflows/: ci.yaml
benches/: solstrale_benchmark.rs
src/: camera.rs  lib.rs  material.rs  pdf.rs  random.rs  vec3.rs
src/geo/: aabb.rs  mod.rs  onb.rs  ray.rs  transformation.rs  vec3.rs
src/hittable/: bvh.rs  constant_medium.rs  hittable_list.rs  hittable_pdf.rs  mod.rs  motion_blur.rs  obj_model.rs  quad.rs  rotation_y.rs  sphere.rs  translation.rs  triangle.rs
src/loader/: mod.rs  obj.rs
src/material/: mod.rs  texture.rs
src/post/: bloom.rs  mod.rs  nop.rs  oidn.rs
src/renderer/: mod.rs  shader.rs
src/util/: gaussian.rs  height_map.rs  interval.rs  mod.rs  rgb_color.rs
tests/: integration_tests.rs  scenes.rs
