[package]
name = "solstrale"
description = "A Path tracing library"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/DanielPettersson/solstrale-rust"
keywords = ["Pathtracing", "Graphics"]
exclude = [
    "resources/*",
    "oidn/*"
]

[features]
oidn-postprocessor = ["dep:oidn"]

[profile.release]
lto = true
codegen-units = 1
debug = 1

[dependencies]
fastrand = "2.0.0"
image = "0.24.5"
simple-error = "0.3.0"
enum_dispatch = "0.3.11"
tobj = "4.0.0"
oidn = { version = "1.4.3", optional = true }
derive_more = "0.99.17"
rayon = "1.6.1"

[dev-dependencies]
image-compare = "0.3.0"
criterion = "0.5.1"

[[bench]]
name = "solstrale_benchmark"
harness = false