[package]
name = "solstrale"
description = "A Path tracing library"
version = "0.1.8"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DanielPettersson/solstrale-rust"
keywords = ["Pathtracing", "Graphics"]
exclude = [
    "resources/*",
    "oidn/*"
]

[features]
oidn-postprocessor = ["dep:oidn"]

[profile.release]
lto = true
codegen-units = 1
debug = 1

[dependencies]
fastrand = "2.0.1"
image = "0.24.8"
simple-error = "0.3.0"
enum_dispatch = "0.3.12"
tobj = "4.0.1"
oidn = { version = "1.4.3", optional = true }
derive_more = "0.99.17"
rayon = "1.8.1"

[dev-dependencies]
image-compare = "0.3.1"
criterion = "0.5.1"

[[bench]]
name = "solstrale_benchmark"
harness = false