[package]
name = "solstrale"
description = "A Path tracing library"
version = "0.1.11"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DanielPettersson/solstrale-rust"
keywords = ["Pathtracing", "Graphics"]
exclude = [
    "resources/*",
    "oidn/*"
]

[features]
oidn-postprocessor = ["dep:oidn"]

[profile.release]
lto = true
codegen-units = 1
debug = 1

[dependencies]
fastrand = "2.0.2"
image = "0.25.1"
simple-error = "0.3.0"
enum_dispatch = "0.3.13"
tobj = "4.0.2"
oidn = { git = "https://github.com/Twinklebear/oidn-rs.git", branch = "master", optional = true }
derive_more = "0.99.17"
rayon = "1.10.0"

[dev-dependencies]
image-compare = "0.4.0"
criterion = "0.5.1"

[[bench]]
name = "solstrale_benchmark"
harness = false